# oq-platform-standalone

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  runserver.sh  setup.py  verifier.sh
.github/workflows/: install_test.yaml
openquakeplatform/: __init__.py  settings.py  utils.py
openquakeplatform/standalone/: __init__.py
openquakeplatform/static/css/: oqplatform.css
openquakeplatform/static/js/: geturlsvar.js
openquakeplatform/templates/: base.html  site_base.html
openquakeplatform/templates/includes/: extra-nav.html  footer.html  header.html
openquakeplatform/test/: __init__.py  satellites_test.py  utils.py
openquakeplatform/test/config/: moon_config.py.tmpl
openquakeplatform_server/: settings.py  urls.py  wsgi.py
openquakeplatform_standalone/: utils.py
openquakeplatform_standalone/templates/: site_base.html
openquakeplatform_standalone/templates/includes/: extra-nav.html  header.html
