[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oq-platform-standalone"
dynamic = ["version"]
description = "Standalone replacements for OpenQuake Platform."
readme = "README.md"
license = "AGPL3"
authors = [
    { name = "GEM Foundation", email = "devops@openquake.org" },
]
maintainers = [
  {name = "GEM Foundation", email = "devops@openquake.org"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Scientists",
    "License :: OSI Approved :: AGPL3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django >=4.2, <5",
]

[project.urls]
Homepage = "http://github.com/gem/oq-platform-standalone"

[tool.setuptools.pacakge-data]
include = [
    "/openquakeplatform",
]

[tool.setuptools.dynamic]
version = {attr = "openquakeplatform.__version__"}
